# py-qr-data-exchange

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  INSTALL.md  README.md  README_MULTIPART.md  crypt_utils.py  extra_windows.py  helper.py  main.py  py_qr_data_exchange_gui.py  pyproject.toml  pytest.ini  qr_data_class.py  requirements-dev.txt  requirements-minimal.txt  requirements.txt  requirements_minimal.txt  run_app.py
.github/workflows/: release.yml
app/: cli.py  controller.py  crypt_utils.py  extra_windows.py  main.py  qr_data_class.py  qr_multi_part.py  service.py
packaging/flatpak/: io.github.vaultecki.PyQRDataExchange.desktop  io.github.vaultecki.PyQRDataExchange.metainfo.xml  io.github.vaultecki.PyQRDataExchange.yml  requirements-minimal.txt
tests/: conftest.py  helpers.py  test_cli.py  test_controller.py  test_crypt_utils.py  test_extra_windows.py  test_main.py  test_qr_multi_part.py  test_service.py
