[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqrdataexchange"
version = "0.3.1"
description = "Transfers files via QR codes: bundled into a tar archive, compressed with LZMA, encrypted, and encoded as one or more QR codes."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "ecki" },
]

dependencies = [
    "Pillow>=10.0.0",
    "qrcode>=7.4.0",
    "qreader>=3.0.0",
    "opencv-python>=4.8.0",
    "PyNaCl>=1.5.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
minimal = [
    "Pillow>=10.0.0",
    "qrcode>=7.4.0",
    "opencv-python-headless>=4.8.0",
    "PyNaCl>=1.5.0",
    "msgpack>=1.0.0",
]
dnd = [
    "tkinterdnd2>=0.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "ruff>=0.5.0",
    "mypy>=1.5.0",
    "types-Pillow>=10.0.0",
    "types-setuptools>=68.0.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
pyqrdataexchange = "app.cli:main"
pyqrdataexchange-gui = "app.main:run_app"

[project.urls]
Homepage = "https://github.com/vaultecki/py-qr-data-exchange"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RET", "PTH"]

[tool.mypy]
ignore_missing_imports = true
